# android-vision

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AndroidManifest.xml  BarcodeCaptureActivity.java  BarcodeGraphicTracker.java  BarcodeTrackerFactory.java  LICENSE  MainActivity.java  README.md  activity_main.xml  build.gradle  get_face_vector.py  strings.xml
.google/: packaging.yaml
FaceTracker/: build.gradle  (+3 more)
FaceTracker/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
FaceTracker/app/jni/: CMakeLists.txt  imageutils_jni.cc  rgb2yuv.cc  yuv2rgb.cc
FaceTracker/app/jni/object_tracking/: config.h  flow_cache.h  frame_pair.h  geom.h  gl_utils.h  image-inl.h  image.h  image_data.h  image_neon.cc  image_utils.h  integral_image.h  jni_utils.h  keypoint.h  keypoint_detector.cc  keypoint_detector.h  object_detector.h  object_model.h  object_tracker.h  object_tracker_jni.cc  optical_flow.h  sprite.h  time_log.h  tracked_object.h  utils.h
FaceTracker/app/signing/: test.jks
FaceTracker/app/src/androidTest/java/com/google/android/gms/samples/vision/face/facetracker/: ExampleInstrumentedTest.java
FaceTracker/app/src/androidTest/java/org/opencv/android/facetracker/: HaarDetectorTest.java
FaceTracker/app/src/main/: AndroidManifest.xml
FaceTracker/app/src/main/assets/runtime_data/: openalpr.defaults.conf
FaceTracker/app/src/main/cpp/: OCV-native-lib.cpp  native-lib.cpp
FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/: FaceGraphic.java  FaceTrackerActivity.java
FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/ui/camera/: CameraSourcePreview.java
FaceTracker/app/src/main/java/com/openalpr/jni/: Alpr.java
FaceTracker/app/src/main/java/dlib/android/: FaceRecognizer.java
FaceTracker/app/src/main/java/org/opencv/android/facetracker/: HaarDetector.java  OpenCvActivity.java
FaceTracker/app/src/main/java/tensorflow/detector/spc/: AutoFitTextureView.java  CameraActivityALPRMain.java  CameraActivityMain.java  CameraActivityMainALPReu.java  CameraActivityMainALPRus.java  CameraActivityMainSPC.java  CameraConnectionFragment.java  LegacyCameraConnectionFragment.java  OpenALPRDetector.java  OverlayView.java  Recognition.java  TensorFlowObjectDetection.java
FaceTracker/app/src/main/java/tensorflow/detector/spc/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java  SplitTimer.java
FaceTracker/app/src/main/java/tensorflow/detector/spc/tracking/: MultiBoxTracker.java  ObjectTracker.java
FaceTracker/app/src/main/res/layout/: activity_alpr.xml  activity_camera.xml  activity_camera_alpr_eu.xml  activity_camera_alpr_us.xml  activity_open_cv.xml  camera_connection_fragment_tracking.xml  main.xml
FaceTracker/app/src/main/res/layout-land/: main.xml
FaceTracker/app/src/main/res/values/: strings.xml  styles.xml
visionSamples/FaceTracker/app/: CMakeLists.txt  build.gradle
visionSamples/FaceTracker/app/src/androidTest/java/com/google/android/gms/samples/vision/face/facetracker/: ExampleInstrumentedTest.java
visionSamples/FaceTracker/app/src/androidTest/java/dlib/android/: FaceRecognizerTest.java
visionSamples/FaceTracker/app/src/main/: AndroidManifest.xml
visionSamples/FaceTracker/app/src/main/cpp/: OCV-native-lib.cpp  native-lib.cpp
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/: CustomDetector.java  FaceGraphic.java  FaceTrackerActivity.java  FaceTrackerApplication.kt  FaceTrackerCameraActivity.java
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/api/api/: ApiInstMgr.kt  Client.kt
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/api/api/adapter/: LiveDataCallAdapter.kt  LiveDataCallAdapterFactory.kt
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/api/api/interf/: IFaceLink.kt
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/api/api/response/: ApiResponse.kt
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/flow/: FaceScaningActivity.kt  FaceSignInOutActivity.kt  FaceSigningEntry.kt  FaceSigningResult.kt  FaceSigningResultActivity.kt  FaceStatisticActivity.kt  FaceTrackerCamera.java  FaceTrackerCameraActivity.java
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/ui/graph/: FaceGraphic.java  Graph.java  GraphicOverlay.java
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/utils/: BuglyMgr.java  Constants.kt  ImageUtils.kt  TimeUtils.kt  Utils.kt  ViewUtils.kt
visionSamples/FaceTracker/app/src/main/java/com/google/android/gms/samples/vision/face/facetracker/view/: CustTickTextView.kt  CustVectorAnalogClock.kt  VectorAnalogClock.java
visionSamples/FaceTracker/app/src/main/java/dlib/android/: Exif.java  FaceRecognizer.java
visionSamples/FaceTracker/app/src/main/res/drawable/: button_bg.xml  button_press_bg.xml  camera_viewfinder_square_3.xml  clock_face.xml  selector_btn_shutter_bg.xml  signing_button_bg_selector.xml
visionSamples/FaceTracker/app/src/main/res/drawable-sw600dp/: clock_face.xml  hours_hand.xml  minutes_hand.xml  second_hand.xml
visionSamples/FaceTracker/app/src/main/res/layout/: activity_face_scaning.xml  activity_face_sign_in_out.xml  activity_face_signing_entry.xml  activity_face_signing_result.xml  activity_face_statistic.xml  activity_face_tracker_camera.xml  analog_clock.xml  main.xml  view_status_ctl_layout.xml  view_top_time_info_layout.xml
visionSamples/FaceTracker/app/src/main/res/layout-land/: activity_face_tracker_camera.xml  main.xml
visionSamples/FaceTracker/app/src/main/res/menu/: menu_camera.xml  menu_camera_menu.xml  menu_face_sign_in_out.xml
visionSamples/FaceTracker/app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
visionSamples/FaceTracker/app/src/main/res/values-sw600dp/: dimens.xml
(+214 files in other folders)
